toolbar-fixed-top z-index

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -19,6 +19,7 @@ a:hover, a:focus {
 .toolbar-fixed-top {
   position: fixed;
   top: 0;
+  z-index: 1000;
 
   & + * {
     margin-top: 80px;
